intelhistory/intelhistory_deployment_flux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intelhistory-flux
  namespace: microsites-pre
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: intelhistory-flux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: intelhistory-flux
    spec:
      containers:
      - image: 800168965370.dkr.ecr.us-east-1.amazonaws.com/stimulant-intel-history:latest
        name: intelhistory-flux
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
