intelhistory/intelhistory_service_flux.yaml
apiVersion: v1
kind: Service
metadata:
  name: intelhistory-flux
  namespace: microsites-pre
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: intelhistory-flux
