intelhistory/intelhistory_ingress_flux.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intelhistory-flux-ingress
  namespace: microsites-pre
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: intelhistory-flux
                 port:
                   number: 80
